--- a/ios/wisp/LaunchScreen.storyboard
+++ b/ios/wisp/LaunchScreen.storyboard
@@ -25,7 +25,8 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" red="0.57647061349999995" green="0.3803921938" blue="0.81960785390000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.529" green="0.807" blue="0.921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
