--- a/ios/wisp/LaunchScreen.storyboard
+++ b/ios/wisp/LaunchScreen.storyboard
@@ -16,8 +16,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Iris App" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rP2-d6-TGu">
-                                <rect key="frame" x="158" y="323" width="58" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Iris App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rP2-d6-TGu">
+                                <rect key="frame" x="0" y="0" width="100" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -27,6 +27,11 @@
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="0.529" green="0.807" blue="0.921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 
+                        <!-- Constraints to center the label -->
+                        <constraints>
+                            <constraint firstItem="rP2-d6-TGu" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="v6D-Yb-O3L"/>
+                            <constraint firstItem="rP2-d6-TGu" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="FdP-yQ-KaW"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
